# mongo-glib

./: .gitignore  ChangeLog  Makefile.am  Makefile.include  README  autogen.sh  configure.ac
data/: Makefile.include  mongo-glib-1.0.pc.in
examples/: bson_tests.py
mongo-glib/: Makefile.include  mongo-bson.c  mongo-bson.h  mongo-client.c  mongo-client.h  mongo-glib.h  mongo-object-id.c  mongo-object-id.h
tests/: Makefile.include  test-mongo-bson.c  test-mongo-client.c
tests/bson/: create.py  test15.bson
